--- a/src/components/pages/Home-v2/GetStarted/styles.module.scss
+++ b/src/components/pages/Home-v2/GetStarted/styles.module.scss
@@ -4,8 +4,8 @@
 .getStarted {
   margin-bottom: var(--spacer-5);
   &_title {
-    padding-top: var(--spacer-1);
-    padding-bottom: var(--spacer-1);
+    padding-top: var(--spacer-3);
+    padding-bottom: var(--spacer-3);
     line-height: 52px !important;
     letter-spacing: -0.48px !important;
   }
